; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_sntp.c_sntp_task.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_sntp.c_sntp_task.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SNTP_HANDLE_RESULT_ID = common dso_local global i32 0, align 4
@SNTP_DOLOOKUPS_ID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32)* @sntp_task to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sntp_task(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %3, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32* (...) @lua_getstate()
  store i32* %8, i32** %5, align 8
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @SNTP_HANDLE_RESULT_ID, align 4
  %11 = icmp eq i32 %9, %10
  br i1 %11, label %12, label %15

12:                                               ; preds = %2
  %13 = load i32*, i32** %5, align 8
  %14 = call i32 @sntp_handle_result(i32* %13)
  br label %27

15:                                               ; preds = %2
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @SNTP_DOLOOKUPS_ID, align 4
  %18 = icmp eq i32 %16, %17
  br i1 %18, label %19, label %22

19:                                               ; preds = %15
  %20 = load i32*, i32** %5, align 8
  %21 = call i32 @sntp_dolookups(i32* %20)
  br label %26

22:                                               ; preds = %15
  %23 = load i32*, i32** %5, align 8
  %24 = load i32, i32* %3, align 4
  %25 = call i32 @handle_error(i32* %23, i32 %24, i32* null)
  br label %26

26:                                               ; preds = %22, %19
  br label %27

27:                                               ; preds = %26, %12
  ret void
}

declare dso_local i32* @lua_getstate(...) #1

declare dso_local i32 @sntp_handle_result(i32*) #1

declare dso_local i32 @sntp_dolookups(i32*) #1

declare dso_local i32 @handle_error(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
